--- a/css/main.css
+++ b/css/main.css
@@ -65,7 +65,7 @@ a:visited {
 
 a:hover,
 a:focus {
-  color: #39b54a;
+  color: #0FACF3;
 }
 
 
@@ -314,7 +314,7 @@ ul.disc li::before {
   width: 8px;
   height: 8px;
   border-radius: 50%;
-  background: #39b54a;
+  background: #0FACF3;
   position: absolute;
   left: -17px;
   top: 11px;
@@ -323,7 +323,7 @@ ul.disc li::before {
 
 dt {
   margin: 0;
-  color: #39b54a;
+  color: #0FACF3;
 }
 
 dd {
@@ -494,7 +494,7 @@ td:last-child {
   right: 100%;
   height: 100%;
   width: 100%;
-  background: #39b54a;
+  background: #0FACF3;
 }
 
 .pace.pace-inactive {
@@ -550,9 +550,9 @@ select {
   display: block;
   height: 6rem;
   padding: 1.5rem 2rem;
-  border: 0;
+  border: 1;
   outline: none;
-  color: #333333;
+  color: white;
   font-family: "muli-regular", sans-serif;
   font-size: 1.5rem;
   line-height: 3rem;
@@ -755,8 +755,8 @@ button.button-primary,
 input[type="submit"].button-primary,
 input[type="reset"].button-primary,
 input[type="button"].button-primary {
-  background-color: #39b54a;
-  border-color: #39b54a;
+  background-color: #0FACF3;
+  border-color: #0FACF3;
   color: #FFFFFF;
 }
 
@@ -800,8 +800,8 @@ button.stroke,
 
 button.stroke:hover,
 .button.stroke:hover {
-  border: 0.3rem solid #39b54a;
-  color: #39b54a;
+  border: 0.3rem solid #0FACF3;
+  color: #0FACF3;
 }
 
 button.pill,
@@ -1027,7 +1027,7 @@ input::-moz-focus-inner {
 }
 
 .stats-tabs li a:hover {
-  color: #39b54a;
+  color: #0FACF3;
 }
 
 .stats-tabs li a em {
@@ -1059,7 +1059,7 @@ h1.intro-header::before {
   content: "";
   height: 2px;
   width: 70px;
-  background-color: #39b54a;
+  background-color: #0FACF3;
   position: absolute;
   left: 0;
   bottom: 0;
@@ -1833,7 +1833,7 @@ html[data-useragent*='MSIE 10.0'] .home-scrolldown,
 }
 
 .about-features .feature .icon i {
-  color: #39b54a;
+  color: #0FACF3;
   font-size: 4.8rem;
 }
 
@@ -1915,7 +1915,7 @@ html[data-useragent*='MSIE 10.0'] .home-scrolldown,
   line-height: 54px;
   text-align: center;
   border-radius: 50%;
-  background-color: #39b54a;
+  background-color: #0FACF3;
   box-shadow: 0 0 0 15px #ffffff;
   z-index: 500;
   position: absolute;
@@ -2124,12 +2124,12 @@ html[data-useragent*='MSIE 10.0'] .home-scrolldown,
 }
 
 .pricing-table .plan-block .plan-block-features li span {
-  color: #39b54a;
+  color: #0FACF3;
   font-family: "muli-bold", sans-serif;
 }
 
 .pricing-table .plan-block.primary {
-  background: #39b54a;
+  background: #0FACF3;
   color: rgba(255, 255, 255, 0.8);
 }
 
@@ -2158,7 +2158,7 @@ html[data-useragent*='MSIE 10.0'] .home-scrolldown,
 
 .pricing-table .plan-block.primary .button.button-primary:hover,
 .pricing-table .plan-block.primary .button.button-primary:focus {
-  color: #39b54a;
+  color: #0FACF3;
 }
 
 .pricing-table .plan-bottom-part {
@@ -2396,7 +2396,7 @@ html[data-useragent*='MSIE 10.0'] .home-scrolldown,
 
 #testimonial-slider .owl-dots .owl-dot.active span,
 #testimonial-slider .owl-dots .owl-dot:hover span {
-  background-color: #39b54a;
+  background-color: #0FACF3;
 }
 
 
@@ -2452,7 +2452,7 @@ html[data-useragent*='MSIE 10.0'] .home-scrolldown,
  * ------------------------------------------------------------------- */
 
 #download {
-  background: #39b54a;
+  background: #0FACF3;
   color: #b2fabc;
   padding-top: 12rem;
   padding-bottom: 12rem;
@@ -2543,7 +2543,7 @@ footer {
 
 footer a,
 footer a:visited {
-  color: #39b54a;
+  color: #0FACF3;
 }
 
 footer a:hover,
@@ -2649,10 +2649,11 @@ footer ul a:visited {
   top: 0;
   right: 0;
   color: #ffffff;
-  background: #39b54a;
-  border-color: #39b54a;
+  background: #0FACF3;
+  border-color: #0FACF3;
   border-radius: 0 .5rem .5rem 0;
   padding: 0 15px;
+  margin-right:-30px;
 }
 
 .footer-subscribe #mc-form label {
