--- a/css/main.css
+++ b/css/main.css
@@ -1529,7 +1529,7 @@ h1.intro-header::before {
 .home-social-list li a:hover,
 .home-social-list li a:focus,
 .home-social-list li a:active {
-  color: #44c455;
+  color: #0FACF3;
 }
 
 
