--- a/css/main.css
+++ b/css/main.css
@@ -1473,6 +1473,7 @@ h1.intro-header::before {
   display: block;
   position: absolute;
   right: 0;
+  left:70%;
   top: 50%;
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
@@ -1485,7 +1486,7 @@ h1.intro-header::before {
 
 .home-image-right img {
   vertical-align: bottom;
-  width: 75%;
+  width: 120%;
 }
 
 
@@ -1809,7 +1810,7 @@ html[data-useragent*='MSIE 10.0'] .home-scrolldown,
 
 #about {
   min-height: 786px;
-  background: #ffffff;
+  background: #FAFAFA;
   padding-top: 18rem;
   overflow: hidden;
 }
@@ -2041,488 +2042,6 @@ html[data-useragent*='MSIE 10.0'] .home-scrolldown,
     -webkit-transform: translateX(-50%);
     -ms-transform: translateX(-50%);
     transform: translateX(-50%);
-  }
-}
-
-
-
-/* ===================================================================
- *  12. pricing - (_layout.scss)
- *
- * ------------------------------------------------------------------- */
-
-#pricing {
-  background: #ebebeb;
-  padding-top: 15rem;
-  padding-bottom: 12rem;
-}
-
-#pricing h1 {
-  margin-bottom: 3.6rem;
-}
-
-.pricing-intro {
-  padding-top: .6rem;
-}
-
-.pricing-table {
-  text-align: center;
-}
-
-.pricing-table .plan-block {
-  background: #ffffff;
-  border-radius: 5px;
-  padding: 4.8rem 4rem 5.4rem;
-  margin-bottom: 4.8rem;
-}
-
-.pricing-table .plan-block:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-.pricing-table .plan-block .plan-block-title {
-  font-family: "montserrat-regular", sans-serif;
-  font-size: 2.4rem;
-  margin-bottom: 3.6rem;
-}
-
-.pricing-table .plan-block .plan-block-price {
-  font-family: "montserrat-medium", sans-serif;
-  font-size: 7.8rem;
-  color: #151515;
-  line-height: 1;
-  margin-bottom: 0;
-}
-
-.pricing-table .plan-block .plan-block-price sup {
-  font-family: "montserrat-regular", sans-serif;
-  font-size: 3rem;
-  top: -3.6rem;
-  margin-right: 3px;
-}
-
-.pricing-table .plan-block .plan-block-per {
-  margin-top: -.6rem;
-  margin-bottom: 0;
-  font-family: "montserrat-medium", sans-serif;
-  font-size: 1.7rem;
-}
-
-.pricing-table .plan-block .plan-block-features {
-  list-style: none;
-  margin: 0 2rem 4.2rem;
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
-  font-size: 1.6rem;
-  line-height: 2.4rem;
-}
-
-.pricing-table .plan-block .plan-block-features li {
-  padding: 1.2rem 0;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-}
-
-.pricing-table .plan-block .plan-block-features li span {
-  color: #0FACF3;
-  font-family: "muli-bold", sans-serif;
-}
-
-.pricing-table .plan-block.primary {
-  background: #0FACF3;
-  color: rgba(255, 255, 255, 0.8);
-}
-
-.pricing-table .plan-block.primary .plan-block-title,
-.pricing-table .plan-block.primary .plan-block-price {
-  color: #ffffff;
-}
-
-.pricing-table .plan-block.primary .plan-block-features {
-  border-top: 1px solid rgba(255, 255, 255, 0.2);
-}
-
-.pricing-table .plan-block.primary .plan-block-features li {
-  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-}
-
-.pricing-table .plan-block.primary .plan-block-features li span {
-  color: #ffffff;
-}
-
-.pricing-table .plan-block.primary .button.button-primary {
-  background: #ffffff;
-  color: #151515;
-  border-color: #ffffff;
-}
-
-.pricing-table .plan-block.primary .button.button-primary:hover,
-.pricing-table .plan-block.primary .button.button-primary:focus {
-  color: #0FACF3;
-}
-
-.pricing-table .plan-bottom-part {
-  margin-top: 3rem;
-}
-
-
-/* -------------------------------------------------------------------
- * responsive:
- * pricing
- * ------------------------------------------------------------------- */
-
-@media only screen and (max-width: 1024px) {
-  #pricing .pricing-content>[class*="col"] {
-    width: 100% !important;
-    float: none !important;
-    clear: both !important;
-    margin-left: 0;
-    margin-right: 0;
-  }
-  #pricing [class*="col"].pricing-intro {
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 650px;
-  }
-  #pricing [class*="col"].pricing-intro h1::before {
-    left: 50%;
-    -webkit-transform: translateX(-50%);
-    -ms-transform: translateX(-50%);
-    transform: translateX(-50%);
-  }
-  #pricing [class*="col"].pricing-table {
-    margin-top: 5.4rem;
-    max-width: 650px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
-
-@media only screen and (max-width: 768px) {
-  .pricing-table .plan-wrap {
-    width: 100% !important;
-    float: none !important;
-    clear: both !important;
-    margin-left: 0;
-    margin-right: 0;
-  }
-  .pricing-table .plan-top-part,
-  .pricing-table .plan-bottom-part {
-    float: left;
-  }
-  .pricing-table .plan-top-part {
-    width: 41.66667%;
-    margin-top: 1.2rem;
-  }
-  .pricing-table .plan-bottom-part {
-    width: 58.33333%;
-  }
-}
-
-@media only screen and (max-width: 600px) {
-  #pricing [class*="col"].pricing-table {
-    max-width: 360px;
-  }
-  #pricing .plan-top-part,
-  #pricing .plan-bottom-part {
-    width: 100% !important;
-    float: none !important;
-    clear: both !important;
-    margin-left: 0;
-    margin-right: 0;
-  }
-}
-
-
-/* ===================================================================
- *  13. testimonials - (_layout.scss)
- *
- * ------------------------------------------------------------------- */
-
-#testimonials {
-  background: #FFFFFF;
-  padding: 15rem 0 9rem;
-  text-align: center;
-  min-height: 600px;
-}
-
-#testimonials h1::before {
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-  -ms-transform: translateX(-50%);
-  transform: translateX(-50%);
-}
-
-#testimonials .owl-wrap {
-  width: 80%;
-  max-width: 900px;
-  margin: 4.2rem auto 0;
-}
-
-#testimonial-slider {
-  margin: 0 0 3rem 0;
-  position: relative;
-}
-
-#testimonial-slider .slides {
-  padding-bottom: 3rem;
-}
-
-#testimonial-slider p {
-  font-family: "muli-regular", sans-serif;
-  font-size: 3.2rem;
-  line-height: 1.5;
-  color: #303030;
-}
-
-#testimonial-slider p::before,
-#testimonial-slider p::after {
-  display: inline-block;
-  font-family: "muli-regular", serif;
-  font-size: 3.6rem;
-  line-height: 1;
-  position: relative;
-  top: .3rem;
-}
-
-#testimonial-slider p::before {
-  content: '\201C';
-}
-
-#testimonial-slider p::after {
-  content: '\201D';
-}
-
-#testimonial-slider .testimonial-author {
-  margin-top: 4.2rem;
-}
-
-#testimonial-slider .testimonial-author img {
-  width: 7.4rem;
-  height: 7.4rem;
-  margin: 0 auto 1.2rem auto;
-  display: block;
-  border-radius: 50%;
-}
-
-#testimonial-slider .testimonial-author .author-info {
-  display: inline-block;
-  vertical-align: middle;
-  text-align: center;
-  font-family: "montserrat-semibold", sans-serif;
-  font-size: 1.9rem;
-  margin-top: .9rem;
-  margin-bottom: 3rem;
-  color: #151515;
-}
-
-#testimonial-slider .testimonial-author .author-info span {
-  display: block;
-  font-family: "muli-bold", sans-serif;
-  font-size: 1.6rem;
-  line-height: 1.313;
-  letter-spacing: 0;
-  text-transform: none;
-  color: rgba(0, 0, 0, 0.5);
-  margin-top: .3rem;
-}
-
-
-/* owl dots */
-
-#testimonial-slider .owl-nav {
-  margin-top: 1.8rem;
-  margin-bottom: 1.5rem;
-  text-align: center;
-  -webkit-tap-highlight-color: transparent;
-}
-
-#testimonial-slider .owl-nav [class*='owl-'] {
-  color: #FFFFFF;
-  font-family: "montserrat-regular", sans-serif;
-  font-size: 1.4rem;
-  height: 3rem;
-  line-height: 3rem;
-  margin: .6rem;
-  padding: 0 10px;
-  background: rgba(0, 0, 0, 0.5);
-  display: inline-block;
-  cursor: pointer;
-  border-radius: 3px;
-  -webkit-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-}
-
-#testimonial-slider .owl-nav [class*='owl-']:hover {
-  background: rgba(0, 0, 0, 0.7);
-  color: #FFFFFF;
-  text-decoration: none;
-}
-
-#testimonial-slider .owl-nav .disabled {
-  background: rgba(0, 0, 0, 0.2);
-  cursor: default;
-}
-
-#testimonial-slider .owl-nav.disabled+.owl-dots {
-  margin-top: 1.8rem;
-}
-
-#testimonial-slider .owl-dots {
-  text-align: center;
-  -webkit-tap-highlight-color: transparent;
-}
-
-#testimonial-slider .owl-dots .owl-dot {
-  display: inline-block;
-  zoom: 1;
-  *display: inline;
-}
-
-#testimonial-slider .owl-dots .owl-dot span {
-  width: 9px;
-  height: 9px;
-  background-color: #959595;
-  margin: 9px 9px;
-  display: block;
-  -webkit-backface-visibility: visible;
-  backface-visibility: visible;
-  transition: opacity 200ms ease;
-  border-radius: 50%;
-  -webkit-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-}
-
-#testimonial-slider .owl-dots .owl-dot.active span,
-#testimonial-slider .owl-dots .owl-dot:hover span {
-  background-color: #0FACF3;
-}
-
-
-/* -------------------------------------------------------------------
- * responsive:
- * testimonials
- * ------------------------------------------------------------------- */
-
-@media only screen and (max-width: 1024px) {
-  #testimonial-slider p {
-    font-size: 3rem;
-  }
-}
-
-@media only screen and (max-width: 768px) {
-  #testimonial-slider p {
-    font-size: 2.6rem;
-  }
-  #testimonial-slider .testimonial-author img {
-    width: 6.6rem;
-    height: 6.6rem;
-  }
-  #testimonial-slider .testimonial-author .author-info {
-    font-size: 1.8rem;
-  }
-  #testimonial-slider .testimonial-author .author-info span {
-    font-size: 1.5rem;
-  }
-}
-
-@media only screen and (max-width: 600px) {
-  #testimonials .owl-wrap {
-    width: 90%;
-  }
-  #testimonial-slider p {
-    font-size: 2.4rem;
-  }
-}
-
-@media only screen and (max-width: 400px) {
-  #testimonials .owl-wrap {
-    width: 100%;
-  }
-  #testimonial-slider p {
-    font-size: 2rem;
-  }
-}
-
-
-/* ===================================================================
- *  14. download - (_layout.scss)
- *
- * ------------------------------------------------------------------- */
-
-#download {
-  background: #0FACF3;
-  color: #b2fabc;
-  padding-top: 12rem;
-  padding-bottom: 12rem;
-  text-align: center;
-}
-
-#download h1 {
-  color: #ffffff;
-}
-
-#download h1::before {
-  background-color: #2a9038;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-  -ms-transform: translateX(-50%);
-  transform: translateX(-50%);
-}
-
-#download .lead {
-  color: #b2fabc;
-  margin-top: 4.8rem;
-}
-
-#download .row {
-  max-width: 800px;
-}
-
-#download .download-badges {
-  list-style: none;
-  margin: 0;
-  text-align: center;
-}
-
-#download .download-badges li {
-  display: inline-block;
-  margin: 0 7.5px;
-  padding-left: 0;
-}
-
-#download .download-badges li a {
-  display: block;
-  width: 230px;
-  height: 71px;
-  font: 0/0 a;
-  text-shadow: none;
-  color: transparent;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 230px 71px;
-}
-
-#download .download-badges li a.badge-appstore {
-  background-image: url("../images/appstore.png");
-}
-
-#download .download-badges li a.badge-googleplay {
-  background-image: url("../images/google-play.png");
-}
-
-
-/* -------------------------------------------------------------------
- * responsive:
- * download
- * ------------------------------------------------------------------- */
-
-@media only screen and (max-width: 768px) {
-  #download .download-badges li a {
-    width: 194px;
-    height: 60px;
-    background-size: 194px 60px;
   }
 }
 
