--- a/css/main.css
+++ b/css/main.css
@@ -1115,8 +1115,8 @@ h1.intro-header::before {
 
 #header {
   width: 100%;
-  height: 72px;
-  background-color: #111111;
+  height: 62px;
+  background-color: #fff;
   position: fixed;
   left: 50%;
   -webkit-transform: translateX(-50%);
@@ -1132,7 +1132,7 @@ h1.intro-header::before {
 
 .header-logo {
   position: absolute;
-  left: 40px;
+  left: 90px;
   top: 50%;
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
@@ -1508,44 +1508,44 @@ h1.intro-header::before {
 /* home social-list */
 
 .home-social-list {
-  position: absolute;
+  position: inline;
   right: 42px;
-  top: 50%;
+  top: 0%;
   margin: 0;
   padding: 0;
   list-style: none;
   font-size: 2.2rem;
   line-height: 1.75;
-  text-align: center;
+  text-align: right;
   -webkit-transform: translateY(-55%);
   -ms-transform: translateY(-55%);
   transform: translateY(-55%);
 }
 
 .home-social-list::before {
-  display: block;
+  display: inline;
   content: "";
   width: 2px;
   height: 42px;
-  background-color: rgba(255, 255, 255, 0.15);
+  background-color: #0FACF3;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 12px;
 }
 
 .home-social-list li {
-  padding-left: 0;
+  padding-left: -50px;
 }
 
 .home-social-list li a,
 .home-social-list li a:visited {
-  color: #FFFFFF;
+  color: #0FACF3;
 }
 
 .home-social-list li a:hover,
 .home-social-list li a:focus,
 .home-social-list li a:active {
-  color: #0FACF3;
+  color: #FFFFFF;
 }
 
 
